# great-buct-compiler

./: .gitignore  CMakeLists.txt  README.md  interface.cpp  main.cpp  vcpkg.json
src/: DFA.h  LexicalAnalyzer.h  Token.h  main.cpp
src/grammar/: ast.cc  grammar_analyzer.cc  grammar_parser.cc  ll_1_parser.cc
src/include/grammar/: AST.h  ast.h  grammar_analyzer.h  grammar_parser.h  ll_1_parser.h  parser.h
src/include/lex/: ErrorMsg.h  FA.h  Graph.h  NFA.h  Regex.h  alphabet.h  dfa.cc  dfa.h  error_message.h  fa.h  graph.h  lexical_analyzer.h  nfa.h  regex.h  rules.h  token.h
src/include/semantics/: attribute_node.h  binary_ast.h  llvm_config.h  number_ast.h
src/lex/: DFA.cpp  alphabet.cc  alphabet.cpp  dfa.cc  lexical_analyzer.cc  nfa.cc  regex.cc  rules.cc  token.cc
src/semantics/: attribute_node.cxx  binary_ast.cc  number_ast.cc
test/: output.txt  syntax_demo.json  syntax_rule.json
test/grammar/: grammar_analyzer_tester.cc  output.txt  read_from_file.cc
test/lex/: Buggy_grammar_no_matching_production.txt  Buggy_sourceCode_unkownCharacter.txt  DFA_test.cc  NFA_test.cc  alphabet_test.cc  analyzer_test.cc  demo.txt  regex_test.cc  sample_tokens.txt  sourceCode.txt  tokens.txt
